<resources>
    <string name="app_name">MoRe-Care</string>
    <string name="patient_name">Patient Name*</string>
    <string name="mother_s_name">Guardian\'s/Mother\'s Name*</string>
    <string name="sex">Sex*</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="address">Address*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="email_id">Email id(optional)</string>
    <string name="register">Register</string>
    <string name="LogIn">Login</string>
    <string name="security_ques">Security Question*</string>
    <string name="submit">Submit</string>

    <string-array name="dates">

        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>

    <string-array name="Months">

        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>


    </string-array>

    <string-array name="Years">

        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string-array name="Questions">

        <item>What is your Hometown ?</item>
        <item>What is your favourite book ?</item>
        <item>What is your favourite place ?</item>

    </string-array>

    <string-array name="Sexs">

        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>


    <string-array name="Blood_groups">

        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="patient_id">Patient ID</string>
    <string name="title_activity_get_id">GetId</string>
    <string name="bloodGroup">Blood Group*</string>
    <string name="mandatoryFields">* fields are mandatory</string>
    <string name="securityQuestion">Select any one question and answer it(Security Question)*</string>
    <string name="no_internet">Seems you are not connected to the interenet\nConnect and try again</string>
    <string name="registration_success">Registration Successful</string>
    <string name="title_activity_query_check">QueryCheck</string>
    <string name="prob_disease">Probable diseases</string>
    <string name="symptoms">Symptoms</string>
    <string name="next">Next</string>
    <string name="title_activity_symptoms_analyze">symptomsAnalyze</string>
    <string name="title_activity_show_disease">ShowDisease</string>
    <string name="proceed">Proceed</string>
    <string name="symptomsSelected">Symptoms Selected</string>
    <string name="treatment">Treatment</string>
    <string name="title_activity_treatment">Treatment</string>
    <string name="getwellsoon">Get Well Soon</string>
    <string name="mail">Mail Id</string>
</resources>
