<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ju_group.health_assist.Login_fragment"
    android:id="@+id/Loginfragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/login_tv_pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:padding="10dp"
            android:text="@string/patient_id"
            android:textColor="@android:color/holo_purple"/>

        <EditText
            android:id="@+id/login_patientid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorControlNormal"
            tools:text="id "/>


        <TextView
            android:id="@+id/login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:padding="10dp"
            android:text="@string/phone_number"
            android:textColor="@android:color/holo_purple"/>


        <EditText
            android:id="@+id/login_phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:ems="10"
            android:hint="Mobile number"
            android:inputType="phone"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorControlNormal"/>


        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:padding="10dp"
            android:text="@string/LogIn"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            tools:layout_gravity="center"/>

        <TextView
            android:id="@+id/login_forgetid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="Forget Id?"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="italic|bold"/>


    </LinearLayout>

</RelativeLayout>
